--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -50,8 +50,6 @@
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-
-  line-height: 1.563vw;
 }
 .left-contact-info > ul > li > section > p {
   color: #838383;
@@ -60,7 +58,6 @@
   font-family: var(--JakartaSans);
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
 }
 .contact-form-wrap {
   width: 51.953vw;
@@ -87,7 +84,6 @@
   font-family: var(--JakartaSans);
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
 
   border: 0.039vw solid var(--main-color);
 }
@@ -98,7 +94,6 @@ input::placeholder {
   font-family: var(--JakartaSans);
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
 }
 .contact-row > input {
   border: 0.039vw solid var(--main-color);
@@ -112,7 +107,6 @@ input::placeholder {
   font-family: var(--JakartaSans);
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
 }
 #text-message {
   border: 0.039vw solid var(--main-color);
@@ -125,7 +119,7 @@ input::placeholder {
   font-family: var(--JakartaSans);
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
+  
 }
 .contact-row {
   display: flex;
@@ -153,4 +147,69 @@ input::placeholder {
   font-weight: 600;
   line-height: 1.563vw;
   cursor: pointer;
+}
+@media (max-width: 788px) {
+  
+  .contact-wrap {
+    flex-direction: column;
+    align-items: center;
+}
+.left-contact-info > ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 4vw;
+}
+.left-contact-info > ul > li span {
+  width: 5.805vw;
+  height: 5.805vw;
+  font-size: 2.938vw;
+}
+.left-contact-info{
+  width: 66vw;
+}
+.left-contact-info > ul > li > section > h1 {
+
+  font-size: 3.25vw;
+}
+.left-contact-info > ul > li > section > p {
+  font-size: 2.938vw;
+}
+.contact-form-wrap{
+  margin-top: 5vw;
+  width: 100%;
+}
+.contact-row {
+  display: flex;
+  gap: 0.781vw;
+  flex-direction: column;
+}
+.contact-row > input {
+
+  width: 99%;
+  height: 7.125vw;
+  font-size: 2.538vw;
+}
+.contact-row > input::-webkit-input-placeholder{
+  font-size: 2.538vw !important;
+}
+.contact-form-wrap > form > input {
+  
+  height: 7.125vw;
+  font-size: 2.538vw;
+}
+.contact-form-wrap > form > input::-webkit-input-placeholder{
+  font-size: 2.538vw !important;
+}
+#text-message {
+  height: 22vw;
+  font-size: 2.538vw;
+}
+.contact-form-wrap > form > button {
+  height: 5vw;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.25vw;
+}
 }
